5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_2472.log
== TEST (2019-05-01 16:56:32) 
-- CODE:
est1=input().upper()
est2=input().upper()
est3=input().upper()
resp1=input().upper()
resp2=input().upper()
resp3=input().upper()
contador=0
if(est1==rep1):
	contador=+1
if(est2==resp2):
	contador=+1
if(est3==resp3):
	contador=3
print(contador)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(est1==rep1):
NameError: name 'rep1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:00:14) 
-- CODE:
est1=input().upper()
est2=input().upper()
est3=input().upper()
resp1=input().upper()
resp2=input().upper()
resp3=input().upper()
contador=0
if(est1==resp1):
	contador=+1
if(est2==resp2):
	contador=+1
if(est3==resp3):
	contador=3
print(contador)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(est1==rep1):
NameError: name 'rep1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:00:38) 
-- CODE:
est1=input().upper()
est2=input().upper()
est3=input().upper()
resp1=input().upper()
resp2=input().upper()
resp3=input().upper()
contador=0
if(est1==resp1):
	contador=+1
if(est2==resp2):
	contador=+1
if(est3==resp3):
	contador=+1
print(contador)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(est1==rep1):
NameError: name 'rep1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:00:55) 
-- CODE:
est1=input().upper()
est2=input().upper()
est3=input().upper()
resp1=input().upper()
resp2=input().upper()
resp3=input().upper()
contador=0
if(est1==resp1):
	contador=+1
if(est2==resp2):
	contador=+1
if(est3==resp3):
	contador=+1
print(contador)


-- EXECUTION TIME:
0.20403
-- TEST CASE 1:
---- input:
a
b
c
d
e
a
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
a
b
c
a
b
c
---- correct output:
3
---- user output:
1
-- TEST CASE 3:
---- input:
c
d
e
c
d
c
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:01:32) 
-- CODE:
est1=input().upper()
est2=input().upper()
est3=input().upper()
resp1=input().upper()
resp2=input().upper()
resp3=input().upper()
contador=0
if(est1==resp1):
	contador=+1
if(est2==resp2):
	contador=+1
if(est3==resp3):
	contador=+1
print(contador)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(est1==rep1):
NameError: name 'rep1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:02:36) 
-- CODE:
est1=input().upper()
est2=input().upper()
est3=input().upper()
resp1=input().upper()
resp2=input().upper()
resp3=input().upper()
contador=0
if(est1==resp1):
	contador=contador+1
if(est2==resp2):
	contador=contador+1
if(est3==resp3):
	contador=contador+1
print(contador)


-- EXECUTION TIME:
0.192653
-- TEST CASE 1:
---- input:
a
b
c
d
e
a
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
a
b
c
a
b
c
---- correct output:
3
---- user output:
3
-- TEST CASE 3:
---- input:
c
d
e
c
d
c
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
